--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,12 @@
   "type": "commonjs",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "async-handler-express": "^0.2.4",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status": "^1.7.4",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3"
   },
