updated the update route-and check-route

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-october",
   "version": "1.0.0",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": ">=20.0.0"
   },
   "scripts": {
@@ -12,5 +12,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cloudinary": "^2.7.0"
+  }
 }
